--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
         run: composer update --ignore-platform-reqs
       - name: Generate storage link
         run: php artisan storage:link
-      - name: Run Migrations
-        run: php artisan migrate
+      # - name: Run Migrations
+      #   run: php artisan migrate
       - name: Directory Permissions
         run: chmod -R 777 storage bootstrap/cache
       - name: 📂 Sync files
