--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/cashier": "^14.14",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "seshac/otp-generator": "^0.0.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
